--- a/helm/templates/kafka/consumers-for-trying-again/kafka-consumer-exercises.yml
+++ b/helm/templates/kafka/consumers-for-trying-again/kafka-consumer-exercises.yml
@@ -38,7 +38,7 @@ spec:
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: redis
+                  name: new-redis
                   key: redis-password
             - name: KAFKA_CONSUMER_GROUP
               value: try-again
