--- a/helm/templates/backend-deployment.yml
+++ b/helm/templates/backend-deployment.yml
@@ -39,7 +39,7 @@ spec:
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: redis
+                  name: new-redis
                   key: redis-password
             - name: NEW_RELIC_NO_CONFIG_FILE
               value: "true"
