--- a/helm/templates/background-emailer-deployment.yml
+++ b/helm/templates/background-emailer-deployment.yml
@@ -36,7 +36,7 @@ spec:
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: redis
+                  name: new-redis
                   key: redis-password
           volumeMounts:
             - name: google-cloud-storage-serviceaccount
