--- a/helm/templates/fetch-user-field-values-cronjob.yml
+++ b/helm/templates/fetch-user-field-values-cronjob.yml
@@ -30,7 +30,7 @@ spec:
                 - name: REDIS_PASSWORD
                   valueFrom:
                     secretKeyRef:
-                      name: redis
+                      name: new-redis
                       key: redis-password
                 - name: CONFIG_NAME
                   value: "userFieldValues"
