--- a/helm/templates/remove-duplicate-completions--cronjob.yml
+++ b/helm/templates/remove-duplicate-completions--cronjob.yml
@@ -37,5 +37,5 @@ spec:
                 - name: REDIS_PASSWORD
                   valueFrom:
                     secretKeyRef:
-                      name: redis
+                      name: new-redis
                       key: redis-password
