--- a/helm/templates/resync-user-app-datum-cronjob.yml
+++ b/helm/templates/resync-user-app-datum-cronjob.yml
@@ -31,7 +31,7 @@ spec:
                 - name: REDIS_PASSWORD
                   valueFrom:
                     secretKeyRef:
-                      name: redis
+                      name: new-redis
                       key: redis-password
                 - name: CONFIG_NAME
                   value: "resyncUserAppDatum"
