--- a/helm/templates/send-ai-statistics-cronjob.yml
+++ b/helm/templates/send-ai-statistics-cronjob.yml
@@ -30,5 +30,5 @@ spec:
                 - name: REDIS_PASSWORD
                   valueFrom:
                     secretKeyRef:
-                      name: redis
+                      name: new-redis
                       key: redis-password
