--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,6 +6,7 @@ TMC_CLIENT_ID=x
 TMC_CLIENT_SECRET=x
 QUIZNATOR_HOST=x
 TMC_HOST=https://tmc.example.com
+USER_HASH_SECRET=x
 AI_SLACK_URL=x
 DB_HOST=X
 DB_NAME=x
