--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,12 +114,7 @@ jobs:
   test_backend:
     executor: node_postgres
     environment:
-      DATABASE_URL: postgres://root@localhost/circle_test
-      DB_HOST: localhost
-      DB_PORT: 5432
-      DB_USER: root
-      DB_PASSWORD: ""
-      DB_NAME: circle_test
+      DATABASE_URL: postgres://root@localhost:5432/circle_test
       RUNNING_IN_CI: "true"
       NODE_ENV: test
     parallelism: 8
