--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -21,3 +21,5 @@ version: 1.4.6
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 appVersion: 1.4.6
+
+icon: https://storage.googleapis.com/moocfi-images/moocfi.svg
