--- a/helm/templates/kafka/kafka-bridge-deployment.yml
+++ b/helm/templates/kafka/kafka-bridge-deployment.yml
@@ -1,23 +1,24 @@
+{{- $deploymentname := "kafka-bridge" -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kafka-bridge
+  name: {{ $deploymentname }}
   labels:
     {{- include "helm.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
-      app: kafka-bridge
+      app: {{ $deploymentname }}
       {{- include "helm.selectorLabels" . | nindent 6 }}
   replicas: {{ .Values.kafkaBridge.replicaCount }}
   template:
     metadata:
       labels:
-        app: kafka-bridge
+        app: {{ $deploymentname }}
         {{- include "helm.selectorLabels" . | nindent 8 }}
     spec:
       containers:
-        - name: kafka-bridge
+        - name: {{ $deploymentname }}
           image: "{{ .Values.image.repository }}/moocfi-backend:{{ .Values.image.tag | default .Chart.AppVersion }}"
           command: ["sh", "-c", "npm run kafka-bridge"]
           imagePullPolicy: Always
@@ -34,7 +35,7 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 5
           ports:
-            - name: kafka-bridge
+            - name: {{ $deploymentname }}
               containerPort: 3003
           resources:
             limits:
@@ -54,3 +55,7 @@ spec:
                   key: redis-password
             - name: UV_THREADPOOL_SIZE
               value: "8"
+            - name: CONNECTION_LIMIT
+              value: "{{ default 0 .Values.kafkaBridge.connectionLimit }}"
+            - name: APPLICATION_NAME
+              value: "{{ $deploymentname }}"
