--- a/helm/templates/kafka/kafka-consumer-user-points-realtime.yml
+++ b/helm/templates/kafka/kafka-consumer-user-points-realtime.yml
@@ -1,23 +1,24 @@
+{{- $deploymentname := "kafka-consumer-user-points-realtime" -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kafka-consumer-user-points-realtime
+  name: {{ $deploymentname }}
   labels:
     {{- include "helm.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
-      app: kafka-consumer-user-points-realtime
+      app: {{ $deploymentname }}
       {{- include "helm.selectorLabels" . | nindent 6 }}
-  replicas: {{ .Values.kafkaConsumer.userPointsRealtime.replicaCount }}
+  replicas: {{ .Values.kafkaConsumer.topic.userPointsRealtime.replicaCount }}
   template:
     metadata:
       labels:
-        app: kafka-consumer-user-points-realtime
+        app: {{ $deploymentname }}
         {{- include "helm.selectorLabels" . | nindent 8 }}
     spec:
       containers:
-        - name: kafka-consumer-user-points-realtime
+        - name: {{ $deploymentname }}
           image: "{{ .Values.image.repository }}/moocfi-backend:{{ .Values.image.tag | default .Chart.AppVersion }}"
           command: ["sh", "-c", "npm run kafka-consumer-user-points-realtime"]
           imagePullPolicy: Always
@@ -40,6 +41,10 @@ spec:
                 secretKeyRef:
                   name: new-redis
                   key: redis-password
+            - name: CONNECTION_LIMIT
+              value: "{{ default .Values.kafkaConsumer.connectionLimit .Values.kafkaConsumer.topic.userPointsRealtime.connectionLimit }}"
+            - name: APPLICATION_NAME
+              value: "{{ $deploymentname }}"
           volumeMounts:
             - name: google-cloud-storage-serviceaccount
               mountPath: "/etc/gcs"
