--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -49,7 +49,8 @@
     "maxNodeModuleJsDepth": 8,
     "typeRoots": [
       "node_modules/@types",
-      "types"
+      "types",
+      "node_modules/user-agent-data-types"
     ],
     "plugins": [
       {
