--- a/helm/templates/background-emailer-deployment.yml
+++ b/helm/templates/background-emailer-deployment.yml
@@ -21,7 +21,7 @@ spec:
       containers:
         - name: {{ $deploymentname }}
           image: "{{ .Values.image.repository }}/moocfi-backend:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          command: ["sh", "-c", "npm run background-emailer"]
+          command: ["sh", "-c", "pnpm background-emailer"]
           imagePullPolicy: Always
           resources:
             limits:
