--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,6 +19,7 @@
     "noUnusedParameters": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "preserveSymlinks": false,
     "plugins": [{ "name": "nexus/typescript-language-service" }],
     //"typeRoots": ["node_modules/@types", "types"]
   },
