--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "NODE_ENV=production next build",
     "export": "next export",
     "start": "NODE_ENV=production PORT=3021 next start",
-    "upgrade-interactive": "npm-check --update",
+    "upgrade-interactive": "pnpm update -i",
     "generate-page-stubs": "node util/createStubs.js",
     "typecheck": "tsc --noEmit",
     "start:inspect": "NODE_ENV=production PORT=3021 NODE_OPTIONS=--inspect next start",
@@ -19,26 +19,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.7.14",
+    "@apollo/client": "^3.7.15",
     "@date-io/core": "^2.16.0",
     "@date-io/luxon": "^2.16.1",
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@hookform/error-message": "^2.0.1",
-    "@hookform/resolvers": "^3.1.0",
+    "@hookform/resolvers": "^3.1.1",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/mdx": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@monaco-editor/react": "^4.5.1",
     "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "^5.0.0-alpha.126",
-    "@mui/material": "^5.13.2",
-    "@mui/x-date-pickers": "^6.5.0",
-    "@next/env": "^13.4.4",
-    "@next/mdx": "^13.4.4",
+    "@mui/lab": "5.0.0-alpha.134",
+    "@mui/material": "^5.13.5",
+    "@mui/x-date-pickers": "^6.7.0",
+    "@next/env": "^13.4.5",
+    "@next/mdx": "^13.4.5",
     "apollo-upload-client": "^17.0.0",
     "compression": "^1.7.4",
     "css-mediaquery": "^0.1.2",
@@ -54,19 +54,19 @@
     "isomorphic-unfetch": "^4.0.2",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
-    "material-react-table": "^1.11.5",
+    "material-react-table": "^1.13.0",
     "material-ui-confirm": "^3.0.9",
     "module-resolver": "^1.0.0",
     "monaco-editor": "^0.38.0",
     "morgan": "^1.10.0",
-    "next": "^13.4.4",
+    "next": "^13.4.5",
     "next-seo": "^6.0.0",
     "nookies": "^2.5.2",
-    "papaparse": "^5.4.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.44.2",
+    "react-hook-form": "^7.44.3",
     "sharp": "^0.32.1",
     "styled-jsx": "^5.1.2",
     "tmc-client-js": "^0.0.11",
@@ -77,38 +77,40 @@
   },
   "devDependencies": {
     "@graphql-codegen/add": "^5.0.0",
-    "@graphql-codegen/cli": "^4.0.0",
+    "@graphql-codegen/cli": "^4.0.1",
     "@graphql-codegen/client-preset": "^4.0.0",
     "@graphql-codegen/client-preset-swc-plugin": "^0.2.0",
     "@graphql-codegen/fragment-matcher": "^5.0.0",
-    "@graphql-codegen/gql-tag-operations-preset": "^2.1.0",
     "@graphql-codegen/time": "^5.0.0",
     "@graphql-codegen/typescript": "^4.0.0",
     "@graphql-codegen/typescript-apollo-client-helpers": "^2.2.6",
     "@graphql-codegen/typescript-document-nodes": "^4.0.0",
     "@graphql-codegen/typescript-operations": "^4.0.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@hookform/devtools": "^4.3.1",
+    "@svgr/babel-plugin-transform-svg-component": "^8.0.0",
     "@svgr/webpack": "^8.0.1",
     "@types/babel__core": "^7.20.1",
     "@types/css-mediaquery": "^0.1.1",
     "@types/lodash": "^4.14.195",
     "@types/luxon": "^3.3.0",
+    "@types/mdx": "^2.0.5",
     "@types/mdx-js__react": "^1.5.5",
     "@types/mime-types": "^2.1.1",
-    "@types/node": "^20.2.5",
+    "@types/node": "^20.3.1",
     "@types/papaparse": "^5.3.7",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
     "@types/react-fontawesome": "^1.6.5",
     "@types/ua-parser-js": "^0.7.36",
-    "@types/uuid": "^9.0.1",
+    "@types/uuid": "^9.0.2",
     "cors": "^2.8.5",
     "event-stream": "^4.0.1",
     "next-statoscope": "^1.0.1",
     "source-map-support": "^0.5.21",
     "typescript": "^5.1.3",
     "user-agent-data-types": "^0.3.1",
-    "webpack": "^5.84.1"
+    "webpack": "^5.87.0"
   },
   "overrides": {
     "graphql": "16.6.0"
