--- a/helm/templates/course-stats-emailer-cronjob.yml
+++ b/helm/templates/course-stats-emailer-cronjob.yml
@@ -23,7 +23,7 @@ spec:
           containers:
             - name: course-stats-emailer
               image: "{{ .Values.image.repository }}/moocfi-backend:{{ .Values.image.tag | default .Chart.AppVersion }}"
-              command: ["sh", "-c", "npm run course-stats-emailer"]
+              command: ["sh", "-c", "pnpm course-stats-emailer"]
               envFrom:
               - secretRef:
                   name: backend-secret
