--- a/helm/templates/fetch-user-field-values-cronjob.yml
+++ b/helm/templates/fetch-user-field-values-cronjob.yml
@@ -22,7 +22,7 @@ spec:
           containers:
             - name: fetch-user-field-values
               image: "{{ .Values.image.repository }}/moocfi-backend:{{ .Values.image.tag | default .Chart.AppVersion }}"
-              command: ["sh", "-c", "npm run fetch-user-field-values"]
+              command: ["sh", "-c", "pnpm fetch-user-field-values"]
               envFrom:
               - secretRef:
                   name: backend-secret
