--- a/helm/templates/kafka/consumers-for-top-of-the-queue/kafka-consumer-user-points-realtime.yml
+++ b/helm/templates/kafka/consumers-for-top-of-the-queue/kafka-consumer-user-points-realtime.yml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: kafka-consumer-user-points-realtime-top-of-the-queue
           image: "{{ .Values.image.repository }}/moocfi-backend:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          command: ["sh", "-c", "npm run kafka-consumer-user-points-realtime"]
+          command: ["sh", "-c", "pnpm kafka-consumer-user-points-realtime"]
           imagePullPolicy: Always
           ports:
             - name: backend-http
