--- a/helm/templates/kafka/consumers-for-trying-again/kafka-consumer-user-course-progress-realtime.yml
+++ b/helm/templates/kafka/consumers-for-trying-again/kafka-consumer-user-course-progress-realtime.yml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: kafka-consumer-user-course-progress-realtime-try-again
           image: "{{ .Values.image.repository }}/moocfi-backend:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          command: ["sh", "-c", "npm run kafka-consumer-user-course-progress-realtime"]
+          command: ["sh", "-c", "pnpm kafka-consumer-user-course-progress-realtime"]
           imagePullPolicy: Always
           ports:
             - name: backend-http
