--- a/helm/templates/kafka/kafka-consumer-exercises.yml
+++ b/helm/templates/kafka/kafka-consumer-exercises.yml
@@ -20,7 +20,7 @@ spec:
       containers:
         - name: {{ $deploymentname }}
           image: "{{ .Values.image.repository }}/moocfi-backend:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          command: ["sh", "-c", "npm run kafka-consumer-exercises"]
+          command: ["sh", "-c", "pnpm kafka-consumer-exercises"]
           imagePullPolicy: Always
           ports:
             - name: backend-http
