--- a/helm/templates/kafka/kafka-status-deployment.yml
+++ b/helm/templates/kafka/kafka-status-deployment.yml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: kafka-status
           image: "{{ .Values.image.repository }}/moocfi-backend:{{ .Values.image.tag | default .Chart.AppVersion }}"
-          command: ["sh", "-c", "npm run kafka-status"]
+          command: ["sh", "-c", "pnpm kafka-status"]
           imagePullPolicy: Always
           ports:
             - name: backend-http
