--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,22 @@ jobs:
       - image: cimg/node:18.16.0
     steps:
       - checkout
-      - node/install-packages
+      - run:
+          name: "Setup pnpm store"
+          command: |
+            pnpm config set store-dir ~/.pnpm-store
+      - restore_cache:
+          keys:
+          - root-cache-{{ checksum "package.json" }}-checksum "pnpm-lock.yaml" }}
+          - root-cache-{{ checksum "package.json" }}
+      - run:
+          name: "Install packages"
+          command: |
+            pnpm i --prefer-offline --frozen-lockfile
+      - save_cache:
+          key: root-cache-{{ checksum "package.json" }}-{{ checksum "pnpm-lock.yaml" }}
+          paths:
+            - ~/.pnpm-store
       - run:
           name: "Check code style"
           command: "bin/check-code-style.sh"
@@ -41,6 +56,10 @@ jobs:
       - setup_remote_docker:
           version: "20.10.18"
           docker_layer_caching: true
+      - run:
+          name: "Setup pnpm store"
+          command: |
+            pnpm config set store-dir ~/.pnpm-store
       - restore_cache:
           keys:
           - frontend-cache-{{ checksum "frontend/package.json" }}-checksum "frontend/pnpm-lock.yaml" }}
