--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,8 +57,10 @@ jobs:
           version: "20.10.18"
           docker_layer_caching: true
       - run:
-          name: "Setup pnpm store"
+          name: "Setup pnpm"
           command: |
+            corepack enable
+            corepack prepare pnmp@latest-8 --activate
             pnpm config set store-dir ~/.pnpm-store
       - restore_cache:
           keys:
