--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,8 +59,7 @@ jobs:
       - run:
           name: "Setup pnpm"
           command: |
-            corepack enable
-            corepack prepare pnmp@latest-8 --activate
+            npm i --prefix=~/.local -g pnpm
             pnpm config set store-dir ~/.pnpm-store
       - restore_cache:
           keys:
@@ -232,8 +231,7 @@ jobs:
       - run:
           name: "Setup pnpm"
           command: |
-            corepack enable
-            corepack prepare pnmp@latest-8 --activate
+            npm i --prefix=~/.local -g pnpm
             pnpm config set store-dir ~/.pnpm-store
             pnpm config set global-dir ~/.local
       - restore_cache:
