--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
             pnpm config set store-dir ~/.pnpm-store
       - restore_cache:
           keys:
-          - root-cache-{{ checksum "package.json" }}-checksum "pnpm-lock.yaml" }}
+          - root-cache-{{ checksum "package.json" }}-{{ checksum "pnpm-lock.yaml" }}
           - root-cache-{{ checksum "package.json" }}
       - run:
           name: "Install packages"
@@ -63,7 +63,7 @@ jobs:
             pnpm config set store-dir ~/.pnpm-store
       - restore_cache:
           keys:
-          - frontend-cache-{{ checksum "frontend/package.json" }}-checksum "frontend/pnpm-lock.yaml" }}
+          - frontend-cache-{{ checksum "frontend/package.json" }}-{{ checksum "frontend/pnpm-lock.yaml" }}
           - frontend-cache-{{ checksum "frontend/package.json" }}
       - run:
           name: Install Docker Buildx
