--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,7 +12,7 @@ KAFKA_BRIDGE_SECRET=x
 KAFKA_HOST=x
 
 DATABASE_URL=postgres://a:b@localhost:12345/fake?schema=nonexistent
-CONNECTION_LIMIT=x
+CONNECTION_LIMIT=1
 SENTRY_DSN=x
 NEW_RELIC_NO_CONFIG_FILE=x
 NEW_RELIC_LICENSE_KEY=x
@@ -29,6 +29,8 @@ GOOGLE_CLOUD_STORAGE_PROJECT=x
 GOOGLE_CLOUD_STORAGE_KEYFILE=x
 
 HY_ORGANIZATION_ID=x
+
+PRISMA_CLIENT_OUTPUT=${PWD}/node_modules/.prisma/client
 
 UPDATE_USER_SECRET=secret
 BACKEND_URL=http://localhost:4000
