set store in separate step in dockerfiles

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -26,10 +26,11 @@ RUN rm -rf /var/cache/apk/*
 RUN mkdir -p /app && chown -R node /app
 
 RUN corepack enable \
-  && corepack prepare pnpm@latest-8 --activate \
-  && pnpm config set store-dir /home/node/.pnpm-store
+  && corepack prepare pnpm@latest-8 --activate
 
 USER node
+
+RUN pnpm config set store-dir ~/.pnpm-store
 
 WORKDIR /app
 
