--- a/backend/package.json
+++ b/backend/package.json
@@ -62,7 +62,7 @@
     "@google-cloud/storage": "^6.11.0",
     "@graphql-tools/schema": "^10.0.0",
     "@morgothulhu/nexus-plugin-prisma": "^0.43.14",
-    "@prisma/client": "^4.15.0",
+    "@prisma/client": "4.15.0",
     "@sentry/integrations": "^6.19.7",
     "@sentry/node": "^6.19.7",
     "@types/graphql-upload": "^8.0.12",
@@ -145,6 +145,7 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tslib": "^2.5.3",
     "typescript": "^5.1.3"
   },
   "overrides": {
