--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,7 @@
     "seedPoints": "node ./dist/bin/seedPoints.js",
     "seedExercises": "node ./dist/bin/seedExercises.js",
     "seedCompletions": "node ./dist/bin/seedCompletions.js",
-    "createExports": "ts-node ./bin/createExports.ts",
+    "createExports": "node ./dist/bin/createExports.js",
     "kafka-bridge": "node ./dist/bin/kafkaBridge.js",
     "background-emailer": "node ./dist/bin/backgroundEmailer.js",
     "update-course-statuses": "node ./dist/bin/updateCourseStatuses.js",
@@ -58,12 +58,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/server": "^4.7.1",
+    "@apollo/server": "^4.7.3",
     "@devoxa/prisma-relay-cursor-connection": "^2.2.2",
-    "@google-cloud/storage": "^6.10.1",
+    "@google-cloud/storage": "^6.11.0",
     "@graphql-tools/schema": "^10.0.0",
     "@morgothulhu/nexus-plugin-prisma": "^0.43.14",
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^4.15.0",
     "@sentry/integrations": "^6.19.7",
     "@sentry/node": "^6.19.7",
     "@types/graphql-upload": "^8.0.12",
@@ -76,19 +76,19 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "graphql": "16.6.0",
-    "graphql-scalars": "^1.22.1",
+    "graphql-scalars": "^1.22.2",
     "graphql-upload": "^13.0.0",
     "graphql-ws": "^5.13.1",
     "helmet": "^7.0.0",
     "json-parse-even-better-errors": "^3.0.0",
     "JSONStream": "^1.3.5",
     "knex": "^2.4.2",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "luxon": "^3.3.0",
     "micromustache": "^8.0.3",
     "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
-    "newrelic": "^10.1.2",
+    "newrelic": "^10.3.0",
     "nexus": "^1.3.0",
     "node-rdkafka": "^2.16.1",
     "nodemailer": "^6.9.3",
@@ -97,7 +97,7 @@
     "pg-query-stream": "^4.5.0",
     "prisma": "^4.15.0",
     "prisma-graphql-type-decimal": "^3.0.0",
-    "redis": "^4.6.6",
+    "redis": "^4.6.7",
     "sharp": "^0.32.1",
     "shortid": "^2.2.16",
     "tmc-client-js": "^0.0.11",
@@ -109,26 +109,26 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.1",
-    "@babel/preset-env": "^7.22.2",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@types/body-parser": "^1.19.2",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/faker": "^5.5.9",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.2",
     "@types/jsonstream": "^0.8.31",
     "@types/lodash": "^4.14.195",
     "@types/luxon": "^3.3.0",
     "@types/mime-types": "^2.1.1",
     "@types/morgan": "^1.9.4",
-    "@types/node": "^20.2.5",
+    "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.8",
     "@types/shortid": "^0.0.29",
-    "@types/uuid": "^9.0.1",
+    "@types/uuid": "^9.0.2",
     "@types/websocket": "^1.0.5",
-    "@types/ws": "^8.5.4",
+    "@types/ws": "^8.5.5",
     "esm": "^3.2.25",
     "faker": "^5.5.3",
     "get-port": "^5.0.0",
@@ -139,7 +139,7 @@
     "jest-mock": "^29.5.0",
     "jest-snapshot": "^29.5.0",
     "locate-path": "^7.2.0",
-    "nanoid": "^3.3.2",
+    "nanoid": "^3.3.6",
     "nock": "^13.3.1",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
